# kromer

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20211006201056_create_xp_table.sql  20211009212153_create_selfroles.sql
src/: build.rs  lib.rs  main.rs
src/bot/: info.rs  mod.rs  xp.rs
src/bot/roles/: mod.rs  reaction.rs
src/command/: chat.rs  mod.rs
src/model/: mod.rs  xp.rs
src/model/roles/: reaction.rs
src/service/: cons.rs  context.rs  mod.rs
src/services/: mod.rs  xp.rs
src/services/roles/: reaction.rs
