[package]
name = "kromer"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "bot"

[dependencies]
twilight-model = "0.6"
twilight-http = "0.6"
twilight-gateway = "0.6"
twilight-cache-inmemory = "0.6"

anyhow = "1"
dotenv = "0.15"
dashmap = "4"

log = "0.4"
env_logger = "0.9"

structopt = "0.3"

tokio-stream = "0.1"

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "rt-multi-thread"]
